FIX: make home page card not stretch

--- a/src/pages/MyComponents/MyComponents.module.css
+++ b/src/pages/MyComponents/MyComponents.module.css
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 1rem;
   height: 100%;
+  align-items: flex-start;
 }
 .card {
   background-color: #fff;
